[tool.poetry]
name = "pile"
version = "0.1.0"
description = "A document management system"
authors = ["Heinrich Hartmann <heinrich@heinrichhartmann.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
