[tool.poetry]
name = "pile"
version = "0.1.0"
description = "A document management system"
authors = ["Heinrich Hartmann <heinrich@heinrichhartmann.com>"]
include = ["static/*"]

[tool.poetry.dependencies]
python = "^3.6"
aiohttp = "^3.7.3"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[tool.poetry.scripts]
pile = 'pile.cli:main'
piled = 'pile.srv:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
